--- a/PMS-PropertyHapa.Staff/Views/Lease/AddLease.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Lease/AddLease.cshtml
@@ -436,8 +436,12 @@
                                                 <p>Tell us more about the security deposits you are holding</p>
                                             </div>
                                         </div>
-                                        <div class="deposit-details-container" id="securityDepositsContainer">
-                                            <!-- Security deposit detail inputs are dynamically added here -->
+                                        <div id="securityDepositsContainer">
+                                            @for (int i = 0; i < Model?.SecurityDeposits.Count; i++)
+                                            {
+                                                <input type="text" name="SecurityDeposits[@i].Description" value="@Model.SecurityDeposits[i].Description" />
+                                                <input type="number" name="SecurityDeposits[@i].Amount" value="@Model.SecurityDeposits[i].Amount" />
+                                            }
                                         </div>
                                         <div class="text-left my-3">
                                             <div class="row">
@@ -739,22 +743,23 @@
         });
     }
 
-    function addSecurityDepositEntry(amount, description, index) {
-        const entryHtml = `
-                <div class="deposit-detail row mb-3" data-index="${index}">
-                    <div class="col-sm-4">
-                        <input type="text" class="form-control mb-2" name="SecurityDeposits[${index}].Description" placeholder="Description" value="${description}">
-                    </div>
-                    <div class="col-sm-4">
-                        <input type="number" class="form-control mb-2" name="SecurityDeposits[${index}].Amount" placeholder="Amount" value="${amount}">
-                    </div>
-                    <div class="col-sm-4">
-                        <button type="button" class="btn btn-danger remove-deposit">Remove</button>
-                    </div>
-                </div>`;
-        $("#securityDepositsContainer").append(entryHtml);
-    }
+    let securityDepositIndex = 0;
 
+    function addSecurityDepositEntry() {
+        const container = document.getElementById("securityDepositsContainer");
+        if (container) { // Check if the container exists
+            const entryHtml = `
+                <div class="deposit-detail">
+                    <input type="text" name="SecurityDeposits[${securityDepositIndex}].Description" placeholder="Description">
+                    <input type="number" name="SecurityDeposits[${securityDepositIndex}].Amount" placeholder="Amount">
+                </div>
+            `;
+            container.insertAdjacentHTML('beforeend', entryHtml);
+            securityDepositIndex++;
+        } else {
+            console.error("Container not found");
+        }
+    }
 
 
 
@@ -1050,7 +1055,6 @@
 
 
     let rentChargeIndex = 0;
-    let securityDepositIndex = 0;
 
     document.getElementById('addAnotherCharge').addEventListener('click', function () {
         const container = document.getElementById('rentChargesContainer');
@@ -1180,9 +1184,10 @@
     });
 
 
-
+   
     function submitLeaseForm() {
         var appTenantId = localStorage.getItem('userId');
+        var tenantId = @Model?.TenantId;
         var leaseId = $('#leaseId').val();
         var isEditMode = leaseId && leaseId > 0;
         var url = isEditMode ? '/Lease/Update/' + leaseId : '/Lease/Create';
@@ -1197,7 +1202,9 @@
         formData.append('IsMonthToMonth', $('#monthToMonthCard').hasClass('selected') ? 'true' : 'false');
         formData.append('HasSecurityDeposit', $('#yesSecurityFund').hasClass('selected') ? 'true' : 'false');
         formData.append('LateFeesPolicy', $('#yesLateFees').hasClass('selected') ? 'true' : 'false');
-
+        if (tenantId) {
+            formData.append('TenantId', tenantId);
+        }
         // Append Rent Charges and Security Deposits
         appendRentChargesToFormData(formData);
         appendSecurityDepositsToFormData(formData);
